# qrcode-scanner

./: .gitignore  README.md  app.py  pyproject.toml
